[package]
name = "zamm_yang"
version = "0.1.6-beta"
authors = ["Amos Jun-yeung Ng <me@amos.ng>"]
edition = "2018"
description = "A basic, experimental code generator"
readme = "README.md"
repository = "https://github.com/amosjyng/yang"
license = "GPL-3.0"
keywords = ["codegen", "code-generation"]
categories = ["development-tools"]

[dependencies]
colored = "2"
heck = "0.3.1"
indoc = "1.0"
itertools = "0.9.0"
path_abs = "0.5.0"
textwrap = "0.12.1"
semver = "0.9.0"
zamm_yin = "=0.1.3"

[build-dependencies]
zamm = "0.1.1"
