[build-dependencies]
zamm = "0.1.6"

[dependencies]
colored = "2"
heck = "0.3.1"
indoc = "1.0"
itertools = "0.9.0"
path_abs = "0.5.0"
semver = "0.9.0"
textwrap = "0.12.1"
zamm_yin = "=0.2.0"

[package]
authors = ["Amos Jun-yeung Ng <me@amos.ng>"]
categories = ["development-tools"]
description = "A basic, experimental code generator"
edition = "2018"
keywords = ["codegen", "code-generation"]
license = "GPL-3.0"
name = "zamm_yang"
readme = "README.md"
repository = "https://github.com/amosjyng/yang"
version = "0.2.0"
